samples/_failures_safe/1761075608_e705c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8881f437.c: In function ‘main’:
./samples/SAFE/__tmp_8881f437.c:136:30: error: missing terminating " character
  136 |     add_log_entry(&analyzer, "
      |                              ^
./samples/SAFE/__tmp_8881f437.c:136:5: error: expected expression at end of input
  136 |     add_log_entry(&analyzer, "
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_8881f437.c:136:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_8881f437.c:51:5: note: declared here
   51 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_8881f437.c:136:5: error: expected declaration or statement at end of input
  136 |     add_log_entry(&analyzer, "
      |     ^~~~~~~~~~~~~
